# handwriting-decoder

./: README.md  environment.yml  model-prototyping.ipynb  pyproject.toml
example/: modelInference.py  modelTraining.py
notebooks/: creating-dataset.ipynb  model-prototyping-lightning.ipynb
notebooks/.ipynb_checkpoints/: creating-dataset-checkpoint.ipynb
src/: createTestingData.py  createTrainingData.py  hwGRU.py
src/utils/: characterDefinitions.py  makeSyntheticSentences.py
